--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="assets/main.css">
   </head>
   <body>
+    <div class="side-menu" id="side-menu">
+      <a href="#" id="togle-btn">X</a>
+    </div>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"></script>
     <script src="assets/main.js"></script>
   </body>
 </html>
