Add first nav elements and styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <body>
     <div class="side-menu" id="side-menu">
       <a href="#" id="togle-btn">X</a>
+      <div class="nav-wrapper">
+        <h2 class="nav-title">An awesome menu</h2>
+        <nav>
+          <ul class="nav-items">
+              <li class="nav-active"><i class="fas fa-chess-knight nav-icon"></i>Some link</li>
+              <li><i class="fas fa-chess-knight nav-icon"></i>Another link</li>
+            </ul>
+        </nav>
+      </div>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
