Add a container behind side menu

--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
   </head>
   <body>
     <div class="side-menu" id="side-menu">
-      <a href="#" id="togle-btn">X</a>
       <div class="nav-wrapper">
-        <h2 class="nav-title">An awesome menu</h2>
+        <h2 class="nav-title">Awesome title</h2>
         <nav>
           <ul class="nav-items">
-              <li class="nav-active"><i class="fas fa-chess-knight nav-icon"></i>Some link</li>
-              <li><i class="fas fa-chess-knight nav-icon"></i>Another link</li>
+              <li class="nav-active"><i class="fas fa-chess-knight nav-icon"></i>You can't take my horse!</li>
+              <li><i class="fas fa-chess-king nav-icon"></i>King in the north!</li>
             </ul>
         </nav>
       </div>
+    </div>
+    <div class="container">
+      <a href="#" id="toggle-btn">X</a>
+      asdasd
     </div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
