Add a navbar and burguer menu

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
       </div>
     </div>
     <div class="container">
-      <a href="#" id="toggle-btn">X</a>
-      asdasd
+      <div class="nav-header">
+        <div class="burguer-menu">
+          <a href="#" id="toggle-btn"><i class="fas fa-bars"></i></a>          
+        </div>
+        <div class="nav-company">
+          Company Name
+        </div>
+      </div>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
